--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
+logging.level.com.francisco5em.springrestmvc=debug
 
+spring.flyway.enabled=false
+
+#spring.jpa.properties.jakarta.persistence.schema-generation.scripts.action=drop-and-create
+#spring.jpa.properties.jakarta.persistence.schema-generation.scripts.create-source=metadata
+#spring.jpa.properties.jakarta.persistence.schema-generation.scripts.drop-target=drop-and-create.sql
+#spring.jpa.properties.jakarta.persistence.schema-generation.scripts.create-target=drop-and-create.sql
+
+spring.profiles.active=localmysql
+
+
+helloMessage: "Hello from default!"
