--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,14 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>spring-rest-mvc</name>
 	<description>Spring Boot Rest service using MVC</description>
+	
+	<developers>
+        <developer>
+            <name>Francisco Echeverría M.</name>
+            <url>francisco5em@hotmail.com</url>
+        </developer>
+    </developers>
+	
 	<properties>
 		<java.version>17</java.version>
 		<org.mapstruct.version>1.5.5.Final</org.mapstruct.version>
