"Added Spring Security with HttpBasic, updated tests to use authentication"

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,5 +9,9 @@ spring.flyway.enabled=false
 
 spring.profiles.active=localmysql
 
+spring.security.user.name=user1
+spring.security.user.password=password
+
+logging.level.org.springframework.security=trace
 
 helloMessage: "Hello from default!"
