--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 logging.level.com.francisco5em.springrestmvc=debug
+server.port=8081
 
 spring.flyway.enabled=false
 
@@ -15,3 +16,7 @@ spring.security.user.password=password
 logging.level.org.springframework.security=trace
 
 helloMessage: "Hello from default!"
+
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:9090
+
+spring.security.oauth2.client.registration.github.client-authentication-method=private_key_jwt
